--- a/CrossCloudService/ant/build.xml
+++ b/CrossCloudService/ant/build.xml
@@ -61,6 +61,7 @@
   	${jar.dir}/jersey-server-1.4.jar;
   	${jar.dir}/jettison-1.1.jar;
   	${jar.dir}/jsr311-api-1.1.1.jar;
+  	${jar.dir}/jackson-all-1.9.0.jar;
   	${jar.dir}/stax-api-1.0-2.jar"
   />
 	
