--- a/CrossCloudService/ant/build.xml
+++ b/CrossCloudService/ant/build.xml
@@ -65,6 +65,7 @@
   	${jar.dir}/jsr311-api-1.1.1.jar;
   	${jar.dir}/jackson-all-1.9.0.jar;
   	${jar.dir}/stax-api-1.0-2.jar
+  	${jar.dir}/commons-codec-1.6.jar;
   	${jar.dir}/jena-core-2.10.1.jar;
   	${jar.dir}/httpclient-4.2.3.jar;
   	${jar.dir}/jena-iri-0.9.6.jar;
