--- a/CrossCloudService/web/WEB-INF/web.xml
+++ b/CrossCloudService/web/WEB-INF/web.xml
@@ -7,15 +7,11 @@
     <servlet-class>
   		com.sun.jersey.spi.container.servlet.ServletContainer
   	</servlet-class>
-  	<init-param>
-      <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-      <param-value>true</param-value>
- 	</init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>JAX-RS REST Servlet</servlet-name>
-    <url-pattern>/services/*</url-pattern>
+    <url-pattern>/server/*</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
